Table "genres" {
  "genre_id" int [pk, increment]
  "genre_title" varchar(255)
  "is_boolean" tinyint(1)
}

Table "movies" {
  "movie_id" int [pk, increment]
  "title" varchar(255)
  "play_time" int [default: 120]

Indexes {
  title [unique, name: "movies_pk"]
}
}

Table "movies_genres" {
  "fk_movie_id" int [not null]
  "fk_genre_id" int [not null]
}

Table "users" {
  "user_id" int [pk, increment]
  "email" varchar(255)
  "password" varchar(255)
  "fk_movie_id" int

Indexes {
  email [unique, name: "email"]
}
}

Table "users_audit" {
  "user_id" int [not null]
  "action_type" varchar(255) [not null]
  "user_email" varchar(255) [not null]
  "user_password" int [not null]
  "action_date" datetime [not null]
  "movie_id" int
  "changes_by_user" varchar(255) [not null]
}

Ref "movies_genres___fk":"movies"."movie_id" < "movies_genres"."fk_movie_id"

Ref "movies_genres_genres_genre_id_fk":"genres"."genre_id" < "movies_genres"."fk_genre_id"

Ref "users_movies_movie_id_fk":"movies"."movie_id" < "users"."fk_movie_id"
